# request-input/following/follow-user-input.go
@@ -1,0 +1,5 @@
+package following
+
+type FollowUserInput struct {
+	Username string `json:"username"`
+}
